<resources>
    <string name="app_name">Stacks Flashcards</string>
    <string name="app_name_short">Stacks</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_stack">Add Stack</string>
    <string name="stack_name">Stack Name</string>
    <string name="stack_description">Stack Description</string>
    <string name="stack_select_icon">Select Stack Icon</string>
    <string name="new_stack">New Stack</string>
    <string name="stack_create">Create Stack</string>
    <string name="stack_edit">Edit Stack</string>
    <string name="stack_archive">Archive Stack</string>
    <string name="action_search_stacks">Search Stacks</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_restore_stack">Restore Stack</string>
    <string name="this_cant_be_undone">This can\'t be undone!</string>
    <string name="stacks">Stacks</string>
    <string name="title_activity_information">Help</string>
    <string name="empty_stack_text">Add a Stack to begin</string>
    <string name="title_activity_card">Cards</string>
    <string name="empty_card_text">Add a Card to your Stack</string>
    <string name="action_search_cards">Search Cards</string>
    <string name="action_add_card">Add Card</string>
    <string name="card_archive">Archive Card</string>
    <string name="stack_merge">Merge Stacks</string>
    <string name="archive_after_merge">Archive originals after merge</string>
    <string name="card_create">Create Card</string>
    <string name="new_card">New Card</string>
    <string name="edit_card">Edit Card</string>
    <string name="undo">Undo</string>
    <string name="retry">Retry</string>
    <string name="action_play_stack">Play Stack</string>
    <string name="title_activity_play">Play</string>
    <string name="action_stats">Stats</string>
    <string name="thats_all">That\'s All!</string>
    <string name="back_to_exit">Press back to exit</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="title_activity_stats">Stats</string>
    <string name="action_edit_sessions">Edit Sessions</string>
    <string name="action_sort">Sort Cards</string>
    <string name="action_sort_wrong">Sort by wrong</string>
    <string name="action_sort_correct">Sort by correct</string>
    <string name="edit_sessions">Edit Sessions</string>
    <string name="action_reset_sessions">Reset Stats</string>
    <string name="empty_stats_text">Play a Stack to see stats</string>
    <string name="play_simple_test">Simple Test</string>
    <string name="replay_test">Replay Simple Test</string>
    <string name="apply">Apply</string>
    <string name="archived_stacks">Archived Stacks</string>
    <string name="archived_cards">Archived Cards</string>
    <string name="action_restore_all">Restore All</string>
    <string name="action_delete_all">Delete All</string>
    <string name="intro_activity">Introduction</string>
    <string name="show_intro">Show Intro</string>
    <string name="session_activity">Tests</string>
    <string name="empty">Empty</string>
    <string name="title_activity_learn">Learn</string>
    <string name="learn_stack">Learn Stack</string>
    <string name="action_sort_name">Sort alphabetically</string>
    <string name="match_session">Match Session</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="playSessionDefaultDropdown">Play Session</string>
    <string name="card_label">Card Label</string>
    <string name="play_session">Play Session</string>
    <string name="intro_stacks">Stacks</string>
    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="new_stack_name">New Stack Name</string>
    <string name="new_text">New Text</string>
    <string name="click_to_get_started">Click to get started!</string>
    <string name="session_name">Session Name</string>
    <string name="the_flash_card_app">The flash card app</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="zero_parens">(0)</string>
    <string name="import_quizlet">Import Quizlet Set</string>
    <string name="quizlet_import">Quizlet Import</string>
    <string name="quizlet_attribution">Powered by Quizlet.com</string>
    <string name="import_stack">Import Stack</string>
    <string name="lookup_id">Lookup IDs</string>
    <string name="export_stacks">Export Stacks File</string>
    <string name="import_stacks">Import Stacks File</string>
    <string name="swap_elements">Swap Elements</string>
    <string name="action_switch_theme">Switch Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="pitch_theme">Pitch Theme</string>
    <string name="draw_title">Draw Image</string>
    <string name="action_discard">Discard</string>
    <string name="action_save">Save</string>
    <string name="action_apply">apply</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="change_look_of_stacks">Change the look of Stacks</string>
    <string name="send_feeback">Send Feedback</string>
    <string name="feedback_description">Report bugs, request features, or leave any comments regarding Stacks</string>
    <string name="username">Username</string>
    <string name="image_part_of_details">Image is a part of details</string>
    <string name="keyword">Keyword</string>
    <string name="card_preview">Card Preview</string>
    <string name="application">Application</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_default">0</string>
    <string name="behaviour">Behaviour</string>
    <string name="pref_summary_swipe_deletes">If checked, swiping will delete instead of archiving</string>
    <string name="pref_title_swipe_deletes">Delete on Swipe</string>
    <string name="general">General</string>
    <string name="cards">Cards</string>
    <string name="misc">Misc</string>
    <string name="prefs_send_feedback">Send Feedback</string>
    <string name="prefs_rate_app">Rate Stacks on Google Play</string>
    <string name="developed_by">Developed by Phani Gaddipati</string>
    <string name="cards_summary">Settings for cards</string>
    <string name="stacks_summary">Settings for stacks</string>
    <string name="advanced">Advanced</string>
    <string name="clean_attachments">Clean Attachment Directory</string>
    <string name="reset_db">Reset Database</string>
    <string name="hide_beta_message">Hide Drawing Beta Message</string>
    <string name="reset_preferences">Reset Preferences</string>
    <string name="pref_title_size">Title Text Size</string>
    <string name="appearance">Appearance</string>
    <string name="pref_description_size">Description Text Size</string>
    <string name="pref_details_size">Details Text Size</string>
    <string name="play">Play</string>
    <string name="auto_advance_summary">Auto advance on validation</string>
    <string name="pref_autoadvance">Auto Advance</string>
    <string name="play_summary">Settings for Testing and Learning sessions</string>
    <string name="advanced_summary">Change only if you know what you are doing!</string>
    <string name="pref_shuffle_before_test">Shuffle before testing session</string>
    <string name="import_export">Import and Export</string>
    <string name="upgrade">Upgrade to Donate version</string>
    <string name="pref_summary_card_tap_preview">If checked, shows a preview when a Card is tapped</string>
    <string name="pref_card_tap_preview">Preview on Tap</string>
    <string name="cleanup">Cleanup</string>
    <string name="ads">Ads</string>
    <string name="analytics">Analytics</string>
    <string name="analytics_optout">Google Analytics opt-out</string>
    <string name="analytics_summary">Keeping this unchecked will help make this app better. Application crashes are still reported</string>
    <string name="stack_merge_and_play">Play Stack</string>
    <string name="clean_empty_members">Clean Empty Members</string>
    <string name="clean_empty_members_summary">Delete empty stack, cards, and testing sessions</string>
    <string name="clean_attachments_summary">Delete unused images in the attachment directory</string>
    <string name="add_sample_stack">Add a sample Stack</string>
    <string name="add_sample_stack_summary">Add a sample if one doesn\'t already exist</string>
    <string name="app_information">App Information</string>
    <string name="version">Version</string>
    <string name="version_info">1.8 (22)</string>
    <string name="copyright">Copyright © 2014 Centum Engineering</string>
    <string name="pref_summary_card_crop_drawing">Trim extra whitespace on hand drawn attachments</string>
    <string name="pref_card_crop_drawing">Auto Crop Drawing</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="import_studystack">Import StudyStack</string>
    <string name="prefs_upgrade_app">Upgrade to Pro</string>
    <string name="rate_app_uri">market://details?id=org.centum.android.stack</string>
    <string name="upgrade_app_uri">market://details?id=org.centum.android.stack.pro</string>
    <string name="contact_developer_uri">mailto:phanigaddipati@gmail.com</string>
    <string name="backup_frequency">Backup Frequency</string>
    <string name="backup_summary">How often to backup data to the SD card, in hours. -1 will disable backups</string>
    <string name="multi_stack">Multiple Choice Test</string>
    <string name="title_activity_multi">Multiple Choice Test</string>
    <string name="mutli_summary">Settings for multiple choice tests</string>
    <string name="multi">Multiple Choice</string>
    <string name="pref_margin_advance_title">Advance on margin tap</string>
    <string name="pref_margin_advance_summary">When a margin is tapped, proceed to the next or previous card</string>
    <string name="write_stack">Write In Test</string>
    <string name="write_summary">Settings for write-in tests</string>
    <string name="write">Write In Options</string>
    <string name="ignore_case_summary">Whether to ignore case when checking an answer</string>
    <string name="pref_ignore_case">Ignore Case</string>
    <string name="title_write_activity">Write In</string>
    <string name="pref_min_similarity">Minimum Similarity</string>
    <string name="auto_min_similarity_summary">Minimum answer similarity to qualify as correct (0-100)</string>
    <string name="play_stack">Play Stack</string>
    <string name="mixed_summary">Settings for mixed sessions</string>
    <string name="mixed">Mixed Options</string>
    <string name="test_settings">Test Settings</string>
    <string name="pref_mixed_simple">Simple</string>
    <string name="mixed_question_types">Question Types</string>
    <string name="pref_mixed_multi">Multiple Choice</string>
    <string name="pref_mixed_write_in">Write In</string>
    <string name="test">Tests</string>
    <string name="test_summary">Settings for all testing sessions</string>
    <string name="use_immersive_mode">Use Immersive Mode</string>
    <string name="testing">Testing</string>
    <string name="no_archived_stacks">You have no archived stacks</string>
    <string name="stack_deleted">Stack deleted.</string>
    <string name="permanently_delete_all">Permanently Delete?</string>
    <string name="permanently_delete_all_message">All archived Stacks will be deleted! This cannot be undone!</string>
    <string name="confirm">Confirm</string>
    <string name="prefs_view_release_notes">Release Notes</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="import_s">Import</string>
    <string name="archive">Archive</string>
</resources>