<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_general_settings"
        android:title="@string/appearance">
        <ListPreference
            android:defaultValue="@string/pref_theme_default"
            android:dialogTitle="@string/pref_theme"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:icon="@android:drawable/ic_menu_gallery"
            android:key="pref_theme"
            android:title="@string/pref_theme" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_general_settings"
        android:title="@string/general">
        <PreferenceScreen
            android:icon="@drawable/app_icon_gray"
            android:key="button_stacks_category_key"
            android:persistent="false"
            android:summary="@string/stacks_summary"
            android:title="@string/stacks">
            <PreferenceCategory
                android:key="pref_key_stacks_behaviour_settings"
                android:title="@string/behaviour">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_key_stack_swipe_deletes"
                    android:summary="@string/pref_summary_swipe_deletes"
                    android:title="@string/pref_title_swipe_deletes" />
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:icon="@android:drawable/ic_dialog_dialer"
            android:key="button_cards_category_key"
            android:persistent="false"
            android:summary="@string/cards_summary"
            android:title="@string/cards">
            <PreferenceCategory
                android:key="pref_key_cards_behaviour_settings"
                android:title="@string/behaviour">
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="pref_key_card_crop_drawing"
                    android:summary="@string/pref_summary_card_crop_drawing"
                    android:title="@string/pref_card_crop_drawing" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="pref_key_card_tap_preview"
                    android:summary="@string/pref_summary_card_tap_preview"
                    android:title="@string/pref_card_tap_preview" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_key_card_swipe_deletes"
                    android:summary="@string/pref_summary_swipe_deletes"
                    android:title="@string/pref_title_swipe_deletes" />
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:icon="@android:drawable/ic_media_play"
            android:key="button_play_category_key"
            android:persistent="false"
            android:summary="@string/test_summary"
            android:title="@string/test">
            <PreferenceCategory
                android:key="pref_key_play_behaviour_settings"
                android:title="@string/behaviour">
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="pref_key_play_shuffle_test"
                    android:title="@string/pref_shuffle_before_test" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_key_play_auto_advance"
                    android:summary="@string/auto_advance_summary"
                    android:title="@string/pref_autoadvance" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="pref_key_play_margin_advance"
                    android:summary="@string/pref_margin_advance_summary"
                    android:title="@string/pref_margin_advance_title" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:icon="@android:drawable/ic_media_play"
            android:key="button_write_category_key"
            android:persistent="false"
            android:summary="@string/write_summary"
            android:title="@string/write">
            <PreferenceCategory
                android:key="pref_key_write_behaviour_settings"
                android:title="@string/behaviour">
                <EditTextPreference
                    android:defaultValue="80"
                    android:key="pref_key_write_min_similarity"
                    android:summary="@string/auto_min_similarity_summary"
                    android:title="@string/pref_min_similarity" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_key_write_ignore_case"
                    android:summary="@string/ignore_case_summary"
                    android:title="@string/pref_ignore_case" />

            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:icon="@android:drawable/ic_menu_preferences"
            android:key="button_advanced_category_key"
            android:persistent="false"
            android:summary="@string/advanced_summary"
            android:title="@string/advanced">
            <PreferenceCategory
                android:key="pref_key_cleanup_settings"
                android:title="@string/cleanup">
                <Preference
                    android:key="pref_clean_attachments"
                    android:summary="@string/clean_attachments_summary"
                    android:title="@string/clean_attachments" />
                <Preference
                    android:key="pref_clean_empty_members"
                    android:summary="@string/clean_empty_members_summary"
                    android:title="@string/clean_empty_members" />
                <Preference
                    android:key="pref_reset"
                    android:title="@string/reset_preferences" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="pref_key_analytics_settings"
                android:title="@string/analytics">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_key_analytics_optout"
                    android:summary="@string/analytics_summary"
                    android:title="@string/analytics_optout" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="pref_key_misc_settings"
                android:title="@string/misc">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_key_immersive"
                    android:title="@string/use_immersive_mode" />
                <Preference
                    android:key="pref_add_sample_stack"
                    android:summary="@string/add_sample_stack_summary"
                    android:title="@string/add_sample_stack" />
            </PreferenceCategory>
        </PreferenceScreen>

    </PreferenceCategory>


    <PreferenceCategory
        android:key="pref_key_importexport_settings"
        android:title="@string/import_export">
        <Preference
            android:icon="@android:drawable/ic_menu_save"
            android:key="pref_key_export"
            android:title="@string/export_stacks" />
        <Preference
            android:icon="@android:drawable/ic_menu_add"
            android:key="pref_key_import"
            android:title="@string/import_stacks" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_application_settings"
        android:title="@string/misc">
        <Preference
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/prefs_send_feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/contact_developer_uri" />
        </Preference>
        <Preference
            android:icon="@android:drawable/ic_menu_info_details"
            android:key="pref_key_release_notes"
            android:title="@string/prefs_view_release_notes"></Preference>

        <Preference
            android:icon="@android:drawable/btn_star"
            android:title="@string/prefs_rate_app">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/rate_app_uri" />
        </Preference>
        <Preference
            android:icon="@android:drawable/star_on"
            android:key="pref_key_upgrade"
            android:title="@string/prefs_upgrade_app">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/upgrade_app_uri" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>