<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.centum.android.MainActivity">

    <item
        android:id="@+id/action_search_cards"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_search_cards" />

    <item
        android:id="@+id/action_add_card"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always"
        android:title="@string/action_add_card" />

    <item
        android:icon="@drawable/ic_media_play"
        android:showAsAction="ifRoom"
        android:title="@string/action_play_stack">
        <menu>
            <item
                android:id="@+id/action_replay_stack"
                android:icon="@drawable/ic_action_replay"
                android:showAsAction="ifRoom"
                android:title="@string/replay_test" />
            <item
                android:id="@+id/action_play_stack"
                android:icon="@drawable/ic_media_play"
                android:showAsAction="ifRoom"
                android:title="@string/play_new_test" />
            <item
                android:id="@+id/action_learn_stack"
                android:icon="@drawable/ic_action_repeat"
                android:showAsAction="ifRoom"
                android:title="@string/learn_stack" />
        </menu>
    </item>

    <item
        android:id="@+id/action_show_stats"
        android:icon="@drawable/ic_stats"
        android:showAsAction="ifRoom"
        android:title="@string/action_stats" />

    <item
        android:id="@+id/action_sort_cards"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="ifRoom"
        android:title="@string/action_sort">

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:icon="@drawable/ic_action_labels"
                android:showAsAction="ifRoom"
                android:title="@string/action_sort_name" />
            <item
                android:id="@+id/action_sort_by_correct"
                android:icon="@drawable/ic_action_sort_by_size"
                android:showAsAction="ifRoom"
                android:title="@string/action_sort_correct" />
            <item
                android:id="@+id/action_sort_by_wrong"
                android:icon="@drawable/ic_action_sort_by_size"
                android:showAsAction="ifRoom"
                android:title="@string/action_sort_wrong" />
            <item
                android:id="@+id/action_shuffle_cards"
                android:icon="@drawable/ic_action_shuffle"
                android:showAsAction="ifRoom"
                android:title="@string/action_shuffle" />
        </menu>

    </item>

    <item
        android:id="@+id/action_show_settings"
        android:orderInCategory="-1000"
        android:showAsAction="never"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_show_help"
        android:orderInCategory="-1500"
        android:showAsAction="never"
        android:title="@string/help" />

    <item
        android:id="@+id/action_show_archived"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="never"
        android:title="@string/archived_cards" />

    <item
        android:id="@+id/action_paste_card"
        android:icon="@drawable/ic_action_paste"
        android:showAsAction="never"
        android:title="@android:string/paste" />

</menu>
