<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:activity=".StackActivity">

    <item
        android:id="@+id/action_search_stacks"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search_stacks" />

    <item
        android:id="@+id/action_add_stack"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="ifRoom"
        android:title="@string/action_add_stack" />

    <item
        android:icon="@android:drawable/stat_sys_download"
        android:showAsAction="ifRoom"
        android:title="@string/import_s">
        <menu>
            <item
                android:id="@+id/action_import_quizlet"
                android:icon="@drawable/ic_quizlet"
                android:showAsAction="ifRoom"
                android:title="@string/import_quizlet" />

            <item
                android:id="@+id/action_import_studystack"
                android:icon="@drawable/ic_study_stack"
                android:showAsAction="ifRoom"
                android:title="@string/import_studystack" />
        </menu>
    </item>

    <item
        android:id="@+id/action_show_settings"
        android:orderInCategory="-1000"
        android:showAsAction="never"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_show_help"
        android:orderInCategory="-1500"
        android:showAsAction="never"
        android:title="@string/help" />

    <item
        android:id="@+id/action_show_archived_stacks"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="never"
        android:title="@string/archived_stacks" />

</menu>
