<?xml version="1.0" encoding="utf-8"?>

<org.centum.android.play.PlayLastView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/thats_all"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/play_session"
        android:id="@+id/session_textview"
        android:layout_below="@+id/name_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:textColor="@color/actionbar_background"
        android:layout_marginTop="8dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/session_name"
        android:id="@+id/name_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:visibility="invisible" />
</org.centum.android.play.PlayLastView>